Add image overlay to map

--- a/index.html
+++ b/index.html
@@ -84,31 +84,31 @@
             <div class="item active">
               <img src="img/carousel/Climbers_Crossing_Crevasse_Mt._rainier.jpg" alt="climbers">
               <div class="carousel-caption">
-                Climbers crossing a crevasse on Mt. Rainier
+                <p>Climbers crossing a crevasse on Mt. Rainier</p>
               </div>
             </div>
             <div class="item">
               <img src="img/carousel/Flickr_-_The_U.S._Army_-_Jump_over_Mt._Rainier.jpg" alt="U.S. Army jump over Mt. Rainier">
               <div class="carousel-caption">
-                U.S. Army jump over Mt. Rainier
+                <p>U.S. Army jump over Mt. Rainier</p>
               </div>
             </div>
             <div class="item">
               <img src="img/carousel/Mount_Rainier_-_Paradise_-_Dead_Horse_Creek_Trail_-_August_2014_-_01.jpg" alt="Dead Horse Creek Trail">
               <div class="carousel-caption">
-                Dead Horse Creek Trail
+                <p>Dead Horse Creek Trail</p>
               </div>
             </div>
             <div class="item">
               <img src="img/carousel/Mount_Rainier_-_Paradise_Meadow_in_July_03.jpg" alt="Paradise Meadow in July">
               <div class="carousel-caption">
-                Paradise Meadow in July
+                <p>Paradise Meadow in July</p>
               </div>
             </div>
             <div class="item">
               <img src="img/carousel/Mount_Rainier_and_lake_reflection.jpg" alt="Mount Rainier Lake reflection">
               <div class="carousel-caption">
-                Mount Rainier Lake reflection
+                <p>Mount Rainier Lake reflection</p>
               </div>
             </div>
           </div>
